Fix project information visibility

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -47,7 +47,6 @@
 			transform: translate(-50%, -50%);
 			width: 100%;
 			padding: 0 20px;
-			opacity: 0;
 			transition: opacity 0.2s;
 			z-index: -1;
 
@@ -69,7 +68,7 @@
 			height: 100%;
 			padding: 0 40px;
 			padding-top: 70px;
-			opacity: 1;
+			opacity: 0;
 			transition: opacity 0.2s;
 			z-index: 1;
 
