--- a/styles/style.css
+++ b/styles/style.css
@@ -789,7 +789,6 @@ header .container {
           transform: translate(-50%, -50%);
   width: 100%;
   padding: 0 20px;
-  opacity: 0;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
   z-index: -1;
@@ -818,7 +817,7 @@ header .container {
   height: 100%;
   padding: 0 40px;
   padding-top: 70px;
-  opacity: 1;
+  opacity: 0;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
   z-index: 1;
